2014-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	Use cl-lib as much as possible following the 2014-09-26 change
	in the Emacs trunk.
	* parse-time.el: Try requiring cl-lib.
	(parse-time-incf): Alias to cl-incf or incf.
	(digit-char-p): Remove.
	(parse-time-integer): Alias to cl-parse-integer or the one defined.
	(parse-integer): Rename to parse-time-integer.
	(parse-time-tokenize, parse-time-rules, parse-time-string)
	Use parse-time-incf and parse-time-integer.

2014-09-11  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-cloud.el (gnus-cloud-parse-version-1): Fix misspelling
	of ":delete".

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts):
	Revert last change that breaks links other than cid contents.

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts): Make cid file names relative.

2014-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Make the working buffer
	temporarily displayed when running a mode function (at least org-mode
	requires it).

2014-08-14  Alan Schmitt  <alan.schmitt@polytechnique.org>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to
	the gnus-summary-article-expire-hook should be told where the function
	is going. In particular, the Gnus registry might want to know.

2014-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-hidden-properties): Drop the evil `intangible'.

2014-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-expire-articles): Revert.

2014-08-05  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to
	the gnus-summary-article-expire-hook should be told where the function
	is going. In particular, the Gnus registry might want to know.

2014-08-03  Paul Eggert  <eggert@cs.ucla.edu>
